--- a/Modelbouwer/Resources/Styles/TextBlock.xaml
+++ b/Modelbouwer/Resources/Styles/TextBlock.xaml
@@ -7,6 +7,17 @@
 	</Style>
 	<!--#endregion-->
 
+	<!--#region Default TextBlock-->
+	<Style x:Key="HeaderTextBlock" TargetType="TextBlock">
+		<Setter Property="FontFamily" Value="UD Digi Kyokasho NK-B" />
+		<Setter Property="FontSize" Value="10" />
+		<Setter Property="FontWeight" Value="Bold" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="Margin" Value="2,0" />
+		<Setter Property="VerticalAlignment" Value="Center" />
+	</Style>
+	<!--#endregion-->
+
 	<!--#region TextBlock Bottom-->
 	<Style x:Key="Tab.Panel.Label" TargetType="TextBlock">
 		<Setter Property="FontWeight" Value="DemiBold" />
