--- a/Modelbouwer/Resources/Styles/TextBlock.xaml
+++ b/Modelbouwer/Resources/Styles/TextBlock.xaml
@@ -1,113 +1,123 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-	<!--#region Default TextBlock-->
-	<Style x:Key="DefaultTextBlock" TargetType="TextBlock">
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="VerticalAlignment" Value="Center" />
-	</Style>
-	<!--#endregion-->
+    <!--#region Default TextBlock-->
+    <Style x:Key="DefaultTextBlock" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
+    <!--#endregion-->
 
-	<!--#region TextBlock Bottom-->
-	<Style x:Key="Tab.Panel.Label" TargetType="TextBlock">
-		<Setter Property="FontWeight" Value="DemiBold" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="VerticalAlignment" Value="Bottom" />
-	</Style>
-	<!--#endregion-->
+    <!--#region GroupedRowDataTotal-->
+    <Style x:Key="DataGrid.GroupColum.Data.Header" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="13" />
+        <Setter Property="FontStyle" Value="Italic" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="Foreground" Value="DarkBlue" />
+        <Setter Property="HorizontalAlignment" Value="Right" />
+    </Style>
+    <!--#endregion-->
 
-	<!--#region TextBlock DataGrid (Sub)Total summary block-->
-	<Style x:Key="DataGrid.Group.Total" TargetType="TextBlock">
-		<Setter Property="FontSize" Value="14" />
-		<Setter Property="FontStyle" Value="Italic" />
-		<Setter Property="FontWeight" Value="DemiBold" />
-		<Setter Property="Foreground" Value="DarkSlateBlue" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="VerticalAlignment" Value="Center" />
-	</Style>
-	<!--#endregion-->
+    <!--#region TextBlock Bottom-->
+    <Style x:Key="Tab.Panel.Label" TargetType="TextBlock">
+        <Setter Property="FontWeight" Value="DemiBold" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Bottom" />
+    </Style>
+    <!--#endregion-->
 
-	<!--#region TextBlock shown above a datagrid with info about the datagrid-->
-	<Style x:Key="DataGrid.SelectionTitle" TargetType="TextBlock">
-		<Setter Property="FontSize" Value="15" />
-		<Setter Property="FontWeight" Value="Bold" />
-		<Setter Property="Foreground" Value="DarkBlue" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="Margin" Value="10,0" />
-		<Setter Property="VerticalAlignment" Value="Center" />
-	</Style>
+    <!--#region TextBlock DataGrid (Sub)Total summary block-->
+    <Style x:Key="DataGrid.Group.Total" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontStyle" Value="Italic" />
+        <Setter Property="FontWeight" Value="DemiBold" />
+        <Setter Property="Foreground" Value="DarkSlateBlue" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
+    <!--#endregion-->
+
+    <!--#region TextBlock shown above a datagrid with info about the datagrid-->
+    <Style x:Key="DataGrid.SelectionTitle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="15" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="Foreground" Value="DarkBlue" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Margin" Value="10,0" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
 
 
-	<!--#endregion-->
+    <!--#endregion-->
 
-	<!--#region Textlock that is vissible if valueShow is checked-->
-	<!--  If the ValueShow checkbox is unchecked the style will HIDE the element with the style, and make visible if checkbox is checked  -->
-	<Style x:Key="HideOnNotShowTextBlock" TargetType="TextBlock">
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="VerticalAlignment" Value="Center" />
-		<Setter Property="Visibility" Value="Visible" />
-		<Style.Triggers>
-			<DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="True">
-				<Setter Property="Visibility" Value="Visible" />
-			</DataTrigger>
-			<DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="False">
-				<Setter Property="Visibility" Value="Collapsed" />
-			</DataTrigger>
-		</Style.Triggers>
-	</Style>
-	<!--#endregion-->
+    <!--#region Textlock that is vissible if valueShow is checked-->
+    <!--  If the ValueShow checkbox is unchecked the style will HIDE the element with the style, and make visible if checkbox is checked  -->
+    <Style x:Key="HideOnNotShowTextBlock" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Visibility" Value="Visible" />
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="True">
+                <Setter Property="Visibility" Value="Visible" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="False">
+                <Setter Property="Visibility" Value="Collapsed" />
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+    <!--#endregion-->
 
-	<!--#region Textlock that is vissible if valueShow is unchecked-->
-	<!--  If the ValueShow checkbox is checked the style will HIDE the element with the style, and make visible if checkbox is unchecked  -->
-	<Style x:Key="HideOnShowTextBlock" TargetType="TextBlock">
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="VerticalAlignment" Value="Center" />
-		<Setter Property="Visibility" Value="Visible" />
+    <!--#region Textlock that is vissible if valueShow is unchecked-->
+    <!--  If the ValueShow checkbox is checked the style will HIDE the element with the style, and make visible if checkbox is unchecked  -->
+    <Style x:Key="HideOnShowTextBlock" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Visibility" Value="Visible" />
 
-		<Style.Triggers>
-			<DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="False">
-				<Setter Property="Visibility" Value="Visible" />
-			</DataTrigger>
-			<DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="True">
-				<Setter Property="Visibility" Value="Collapsed" />
-			</DataTrigger>
-		</Style.Triggers>
-	</Style>
-	<!--#endregion-->
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="False">
+                <Setter Property="Visibility" Value="Visible" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding ElementName=valueShow, Path=IsChecked}" Value="True">
+                <Setter Property="Visibility" Value="Collapsed" />
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+    <!--#endregion-->
 
-	<!--#region Textblock Bold Bold-->
-	<Style x:Key="TextBlockBold" TargetType="TextBlock">
-		<Setter Property="FontWeight" Value="Bold" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="VerticalAlignment" Value="Bottom" />
-	</Style>
-	<!--#endregion-->
+    <!--#region Textblock Bold Bold-->
+    <Style x:Key="TextBlockBold" TargetType="TextBlock">
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Bottom" />
+    </Style>
+    <!--#endregion-->
 
-	<!--#region Group Header Textblock-->
-	<Style x:Key="Group.Hearder.TextBlock" TargetType="TextBlock">
-		<Setter Property="FontSize" Value="14" />
-		<Setter Property="FontWeight" Value="Bold" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="VerticalAlignment" Value="Bottom" />
-	</Style>
-	<!--#endregion-->
+    <!--#region Group Header Textblock-->
+    <Style x:Key="Group.Hearder.TextBlock" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Bottom" />
+    </Style>
+    <!--#endregion-->
 
-	<!--#region Textblocks Status line-->
-	<Style x:Key="Status.Label" TargetType="TextBlock">
-		<Setter Property="FontFamily" Value="Poppins" />
-		<Setter Property="FontWeight" Value="Bold" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="Margin" Value="4,0,0,0" />
-		<Setter Property="VerticalAlignment" Value="Center" />
-	</Style>
+    <!--#region Textblocks Status line-->
+    <Style x:Key="Status.Label" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Poppins" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Margin" Value="4,0,0,0" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
 
-	<Style x:Key="Status.Description" TargetType="TextBlock">
-		<Setter Property="FontFamily" Value="Poppins" />
-		<Setter Property="FontStyle" Value="Italic" />
-		<Setter Property="FontWeight" Value="Normal" />
-		<Setter Property="HorizontalAlignment" Value="Left" />
-		<Setter Property="Margin" Value="4,0,0,0" />
-		<Setter Property="VerticalAlignment" Value="Center" />
-	</Style>
+    <Style x:Key="Status.Description" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Poppins" />
+        <Setter Property="FontStyle" Value="Italic" />
+        <Setter Property="FontWeight" Value="Normal" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Margin" Value="4,0,0,0" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
 
-	<!--#endregion-->
+    <!--#endregion-->
 </ResourceDictionary>
